Store Section Height Fix
Again, couldn’t tell this from the spec but the layout breaks without
the height declaration.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,6 +70,7 @@ h4 {
 
 #store{
   width: 1000px;
+  height: 700px;
   margin: auto;
   padding-top: 70px;
 }
